<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:background="@color/colorFondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuenta"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#000000" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt"
        android:textSize="16dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:textStyle="normal"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#2E2E2E">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt2"
        android:textSize="16dp"
        android:textStyle="normal"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#2E2E2E">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt3"
        android:textSize="16dp"
        android:layout_below="@+id/TextView03"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#2E2E2E">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt4"
        android:textSize="16dp"
        android:textStyle="normal"
        android:layout_below="@+id/TextView04"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#2E2E2E">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt5"
        android:textSize="16dp"
        android:textStyle="normal"
        android:layout_below="@+id/TextView05"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#2E2E2E">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queesmicuentatxt6"
        android:textSize="16dp"
        android:textStyle="normal"
        android:layout_below="@+id/TextView06"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#2E2E2E">
    </TextView>
</RelativeLayout>