<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorFondo"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenacionfiltrado"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#000000" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenacionFiltrado1"
        android:textSize="16dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:textColor="#2E2E2E"
        android:textStyle="normal">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenacionFiltrado2"
        android:textSize="16dp"
        android:textColor="#2E2E2E"
        android:textStyle="normal"
        android:layout_below="@+id/TextView01"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignStart="@+id/TextView01"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenacionFiltrado3"
        android:textSize="16dp"
        android:textColor="#2E2E2E"
        android:textStyle="normal"
        android:layout_below="@+id/TextView02"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignStart="@+id/TextView02"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenacionFiltrado4"
        android:textSize="16dp"
        android:textColor="#2E2E2E"
        android:textStyle="normal"
        android:layout_below="@+id/TextView03"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignStart="@+id/TextView03"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
    </TextView>

</RelativeLayout>