<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorFondo">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtrar"
            android:id="@+id/textView1"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:typeface="sans" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbxPoseeTerrazaprefRestUpd"
                android:text="@string/terraza"
                android:elegantTextHeight="false"
                android:clickable="false"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textStyle="normal"
                android:textColor="#000000"
                android:textSize="16dp" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portiposrestaurantes"
                android:textSize="16dp"
                android:id="@+id/btnTypesRestaurantprefRestUpd"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:elevation="10dp"
                android:backgroundTint="@color/colorBotonEfecto" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portiposcomidas"
                android:textSize="16dp"
                android:id="@+id/btnTypesFoodprefRestUpd"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView4"
                android:layout_toEndOf="@+id/textView4"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:elevation="10dp"
                android:backgroundTint="@color/colorBotonEfecto" />
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordenar"
            android:id="@+id/textView2"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:typeface="sans" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbxFreshFoodprefRestUpd"
                android:text="@string/porproductosfrescos"
                android:elegantTextHeight="false"
                android:clickable="false"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:textColor="#000000"
                android:textStyle="normal"
                android:textSize="16dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbxCleaningprefRestUpd"
                android:text="@string/puntuacionlimpieza"
                android:elegantTextHeight="false"
                android:clickable="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#000000"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
